exports[`test renders 1`] = `
<div>
<Meta title="Sign up" />
<Apollo(Connect(Accounts)) />
</div>
`;

exports[`test renders lap-and-up version 1`] = `
<div className="scrollable background--fill background--light-secondary locked-sides@palm-wide-and-up locked-ends@palm-wide-and-up floating soft-double-ends push-double-left@lap-and-up soft-double-left@lap-and-up" style={{...}}>
<Meta title="Sign up" />
<div className="floating__item" style={{...}}>
<div className="card flush-bottom">
<div className="card__item" style={{...}}>
<Apollo(Connect(Accounts)) />
</div>
</div>
</div>
</div>
`;

exports[`test renders server version 1`] = `
<div className="scrollable background--fill background--light-secondary locked-sides@palm-wide-and-up locked-ends@palm-wide-and-up floating soft-double-ends push-double-left@lap-and-up soft-double-left@lap-and-up" style={{...}}>
<Meta title="Sign up" />
<div className="floating__item" style={{...}}>
<div className="card flush-bottom">
<div className="card__item" style={{...}}>
<div className="soft-double">
<Loading />
</div>
</div>
</div>
</div>
</div>
`;
